Populating most of the content I need.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
         <section>
+          <h1>Why are you here?</h1>
+          <p>The first step to being successful is understanding what success would be for you</p>
+          <div class="learn">
+            <p>Hackathons give you:</p>
+            <p>Focused time to zone in on something new.</p>
+            <p>Great energy to fuel you forward.</p>
+            <p>Other resoureces to help you learn.</p>
+          </div>
+          <div class="compete">
+            <p>Hackathons give you:</p>
+            <p>Other people to collaborate with.</p>
+            <p>A competitive environment to drive you to push yourself.</p>
+            <p>Sometimes some nominal prizes.</p>
+          </div>
+        </section>
+        <section>
           <h1>Topic</h1>
           <p class="good">Something good</p>
           <p class="bad">Something bad</p>
@@ -52,6 +68,33 @@
           <div class="compete">
             <p class="good">Applies if you're here to compete</p>
           </div>
+        </section>
+        <section>
+          <section>
+            <h1>People</h1>
+          </section>
+          <section>
+            <h1>Alignment</h1>
+            <div class="learn_and_compete">
+              <p class="good">If everyone is truly aligned towards the same goal there can be incredible results.</p>
+              <p class="bad">Sometimes people won't be honest with themselves and others, and try and fake alignment.  You're better off working separately if you're truly not aligned!  That's okay!</p>
+            </div>
+          </section>
+          <section>
+            <h1>Collaboration</h1>
+            <div class="learn">
+              <p class="good">Learning with others can be incredibly helpful</p>
+              <p class="good">Either pair with someone who knows what you want to learn</p>
+              <p class="good">Or pair with someone who wants to learn the same things</p>
+            </div>
+            <div class="learn_and_compete">
+              <p class="bad">Working with someone else adds overhead</p>
+              <p class="bad">In order to team up on a project you'll need to compromise on what you work on</p>
+            </div>
+            <div class="compete">
+              <p class="good">Pairing with someone with complementary skills can be very powerful</p>
+            </div>
+          </section>
         </section>
         <section>
           <section>
@@ -77,21 +120,47 @@
               <p class="good">The benefits that version control brings to collaborating in a common code base are huge for teams larger than 2 members.</p>
             </div>
           </section>
+          <section>
+            <h1>Communication</h1>
+            <p>Great tools exist, from GitHub itself to Slack to Basecamp.</p>
+            <div class="learn">
+              <p class="good">If you can find others who are exploring the same topics it's invaluable to setup a chat tool like Slack to share learnings and questions.</p>
+            </div>
+            <div class="learn_and_compete">
+              <p class="bad">Be sure to manage the amount of "noise" from any communication tools.  You still need the ability to think deeply and concentrate.  Going DND for an hour is okay, just tell your team members you're doing it.</p>
+            </div>
+            <div class="compete">
+              <p class="good">A proper tool to manage your collaboration through tickets is critical to keep straight who's doing what, what's outstanding, etc.</p>
+            </div>
+          </section>
         </section>
         <section>
-          <h1>Collaboration</h1>
-          <div class="learn">
-            <p class="good">Learning with others can be incredibly helpful</p>
-            <p class="good">Either pair with someone who knows what you want to learn</p>
-            <p class="good">Or pair with someone who wants to learn the same things</p>
-          </div>
-          <div class="learn_and_compete">
-            <p class="bad">Working with someone else adds overhead</p>
-            <p class="bad">In order to team up on a project you'll need to compromise on what you work on</p>
-          </div>
-          <div class="compete">
-            <p class="good">Pairing with someone with complementary skills can be very powerful</p>
-          </div>
+          <section>
+            <h1>Tactics</h1>
+          </section>
+          <section>
+            <h1>Pace</h1>
+            <p>Is it a sprint or a marathon?</p>
+            <div class="learn">
+              <p class="good">Don't be afraid to go down tangents. You probably won't accomplish all your goals, but sometimes the most valuable learnings are the unplanned ones.  Chase the threads.</p>
+            </div>
+            <div class="learn_and_compete">
+              <p>Finding the right balance between moving fast, but not tripping on your own toes is one of the trickiest arts of hackathons to get right.</p>
+            </div>
+            <div class="compete">
+              <p>Take the time to plan, but don't overplan.  Your plan is going to be wrong, things are going to change.  Create a loose plan, then get to work.</p>
+            </div>
+          </section>
+          <section>
+            <h1>Divide and Conquer</h1>
+            <div class="learn">
+              <p class="bad">This tends to be harder to line up where two separate interests naturally complement each other.</p>
+            </div>
+            <div class="compete">
+              <p class="good">Learning how to break up a project into loosely coupled pieces is a critical skill for hackathons and software projeccts in general.</p>
+              <p class="bad">The final integration step can cause your project to fail at the last minute.  Integrate early, and integrate often.</p>
+            </div>
+          </section>
         </section>
         <section data-markdown="slides.md"
                  data-separator="^\n\n\n"
@@ -115,7 +184,6 @@
 				progress: true,
 				history: true,
 				center: true,
-        margin: 0.4,
         maxScale: 1,
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
