A bunch of final content.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
         <section>
+          <h1>So You're Attending A Hackathon</h1>
+          <p>Ben Zittlau</p>
+          <p>ben@getjobber.com</p>
+        </section>
+        <section>
+          <h1>Quick Men's Health Mention</h1>
+          <p>Stay Active</p>
+          <p>Sometimes eat the healthy option</p>
+          <a href="https://ca.movember.com/mospace/13399380">https://ca.movember.com/mospace/13399380</a>
+        </section>
+        <section>
           <h1>Why are you here?</h1>
           <p>The first step to being successful is understanding what success would be for you</p>
           <div class="learn">
@@ -133,6 +144,13 @@
               <p class="good">A proper tool to manage your collaboration through tickets is critical to keep straight who's doing what, what's outstanding, etc.</p>
             </div>
           </section>
+          <section>
+            <h1>Resources</h1>
+            <p>Take advantage of what is there!</p>
+            <div class="learn_and_compete">
+              <p class="good">There is an entire crowd of peers and mentors available to help with problems.  You'll be more successful whether your goal is learning or winning if you can take advantage of what's in the room.</p>
+            </div>
+          </section>
         </section>
         <section>
           <section>
@@ -161,12 +179,36 @@
               <p class="bad">The final integration step can cause your project to fail at the last minute.  Integrate early, and integrate often.</p>
             </div>
           </section>
+          <section>
+            <h1>Sleep</h1>
+            Do you sacrifice valuable hours for sleep, or be the all-night gladiator of the hackathon.
+            <div class="learn_and_compete">
+              <p class="bad">Lack of sleep has real impact on mental performance.  You might not realize it, but you *will* be creating more bugs, solving things in less efficient ways, and making more mistakes in general.  These costs are real.</p>
+            </div>
+            <div class="compete">
+              <p class="good">This is a very short hackathon, so the extra hours *could* have some real impact.</p>
+            </div>
+          </section>
+          <section>
+            <h1>Judging</h1>
+            <p>How can you optimize to win if you don't know how you're judged?</p>
+            <div class="learn">
+              <p>Doesn't apply here</p>
+            </div>
+            <div class="compete">
+              <p class="good">Once you understand how you'll be judged, optimize for it.  If it's a live presentation make sure your interface is clear and simple to communicate your idea quickly.</p>
+              <p class="bad">Too many developers want to believe that hackathons are won by writing the most hardcore code you can in a short time.  That's fine, but then you should accept you're not competing to win.</p>
+            </div>
+          </section>
         </section>
-        <section data-markdown="slides.md"
-                 data-separator="^\n\n\n"
-                 data-separator-vertical="^\n\n"
-                 data-separator-notes="^Note:"
-                 data-charset="iso-8859-15">
+        <section>
+          <section>
+            <h1>Most Importantly...</h1>
+          </section>
+          <section>
+            <div class="learn_and_compete">
+              <h1>Have fun!</h1>
+            </div>
         </section>
 			</div>
 
