Some final content and positioning tweaks.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,20 @@
             </div>
           </section>
           <section>
+            <h1>Hosting</h1>
+            <p>How do you put it "live".</p>
+            <div class="learn">
+              <p class="good">There's very interesting things happening in the infrastructure and DevOps world, which would be great tech to play around with at a hackathon.</p>
+              <p class="bad">Hosting your project could require a lot of time and distract you from what you're trying to focus on learning.</p>
+            </div>
+            <div class="learn_and_compete">
+              <p class="good">If your technologies work with "full serve" hosting platfrom like Heroku it can be very quick and easy to get your project live.</p>
+            </div>
+            <div class="compete">
+              <p class="bad">Often having your project live isn't a requirement of the hackathon and teams waste a lot of time on it.  If you don't need to do it for the requirements consider not bothering!</p>
+            </div>
+          </section>
+          <section>
             <h1>Resources</h1>
             <p>Take advantage of what is there!</p>
             <div class="learn_and_compete">
@@ -209,6 +223,7 @@
             <div class="learn_and_compete">
               <h1>Have fun!</h1>
             </div>
+          </section>
         </section>
 			</div>
 
@@ -226,6 +241,7 @@
 				progress: true,
 				history: true,
 				center: true,
+				height: 1000,
         maxScale: 1,
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
